tenants/platform/services/kube-prometheus-stack/postInstall/alertmanager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - alertmanager.jdwlabs.com
      secretName: alertmanager-tls
  rules:
    - host: alertmanager.jdwlabs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: platform-kube-prometheus-stack-alertmanager
                port:
                  number: 9093
