tenants/platform/services/kube-prometheus-stack/postInstall/prometheus-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  parentRefs:
    - name: platform-gateway
      namespace: nginx-gateway
      sectionName: https
  hostnames:
    - prometheus.jdwlabs.com
  rules:
    - backendRefs:
        - name: platform-kube-prometheus-s-prometheus
          port: 9090
